<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sacis</string>
    <string name="sys_admin">Sistema Administrador</string>
    <string name="sys_user">Sistema Usuario</string>
    <string name="choose_system">Escolha o sistema</string>
    <string name="sys_admin_enter_data">Entre com os dados corretamente</string>
    <string name="sys_admin_name">Nome:</string>
    <string name="sys_admin_login">Login:</string>
    <string name="sys_admin_password">Senha:</string>
    <string name="sys_admin_key">Chave</string>
    <string name="sys_admin_send">Enviar</string>
    <string name="fileChooser">Escolher arquivos</string>
    <string name="user_message">mensagem</string>
    <string name="user_encrypt_files">encrypt files</string>
    <string name="sys_message">Sistema de Mensagens</string>
    <string name="sys_files">Sistema de Arquivos</string>
    <string name="file_chooser_save">Salvar</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="composer_from">De:</string>
    <string name="composer_to">Para:</string>
    <string name="composer_subject">Assunto:</string>
    <string name="composer_encrpyt_message">Criptografar mensagem</string>
    <string name="composer_sign_message">Assinar mensagem</string>
    <string name="composer_new">Nova mensagem</string>
    <string name="inbox">Caixa de Entrada</string>
    <string name="title_activity_message_composer">MessageComposerActivity</string>
    <string name="title_activity_messages_inbox">MessagesInbox</string>

</resources>