<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/composer_from" />

    <EditText
        android:id="@+id/fromEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fromTextView"
        android:layout_alignBottom="@+id/fromTextView"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fromEditText"
        android:layout_marginTop="30dp"
        android:text="@string/composer_to" />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toTextView"
        android:layout_alignBottom="@+id/toTextView"
        android:layout_alignLeft="@+id/fromEditText"
        android:ems="10" >

    </EditText>

    <CheckBox
        android:id="@+id/encryptCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toEditText"
        android:layout_marginTop="39dp"
        android:text="@string/composer_encrpyt_message" />

    <CheckBox
        android:id="@+id/signCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/encryptCheckBox"
        android:text="@string/composer_sign_message" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signCheckBox"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
