<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="0.01"
            android:text="@string/sys_admin_enter_data" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" >

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_login" />


            <EditText
                android:id="@+id/userLoginEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/loginTextView"
                android:inputType="text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_password" />


            <EditText
                android:id="@+id/userPasswordEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/passwordTextView"
                android:inputType="textPassword" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:orientation="vertical" >

            <Button
                android:id="@+id/sendButton"
                android:layout_width="93dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sys_admin_send" android:onClick="sendLoginInfoToServer"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/breadCrumbLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:orientation="vertical" >
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
