<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="0.01"
            android:text="@string/sys_admin_enter_data" />

        <RelativeLayout
            android:id="@+id/name_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_name" >
            </TextView>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/nameTextView"
                android:inputType="textPersonName" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_login" />

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/loginTextView"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_password" >
            </TextView>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/passwordTextView"
                android:inputType="textPassword" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expire_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/expireTextView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_expire" >
            </TextView>

            <EditText
                android:id="@+id/expireEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/expireTextView"
                android:inputType="date" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_and_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/keyButton"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:onClick="getKeyFile"
                android:text="@string/sys_admin_key" >
            </Button>

            <EditText
                android:id="@+id/keyEditText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/keyButton"
                android:inputType="date" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:orientation="vertical" >

            <Button
                android:id="@+id/sendButton"
                android:layout_width="93dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="sendInfoToServer"
                android:text="@string/sys_admin_send" >
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/breadCrumbLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/breadCrumbTextView"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/sys_admin_breadcrumb" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>